After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 756219 - gdkpixbufdec: Fix pixbuf_loader leak during failures
gdkpixbufdec: Fix pixbuf_loader leak during failures
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal normal
: 1.7.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-10-08 02:43 UTC by Vineeth
Modified: 2015-10-08 14:02 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix pixbuf_loader leak (1000 bytes, patch)
2015-10-08 02:44 UTC, Vineeth
committed Details | Review

Description Vineeth 2015-10-08 02:43:57 UTC
When running validate media check for gif files,
analyzing URI times out for some files. There is a memory leak during this scenario.

==7986== 41,389,724 (12 direct, 41,389,712 indirect) bytes in 1 blocks are definitely lost in loss record 3,067 of 3,069
==7986==    at 0x402C17C: malloc (in /usr/lib/valgrind/vgpreload_memcheck-x86-linux.so)
==7986==    by 0x4259BE2: g_malloc (in /lib/i386-linux-gnu/libglib-2.0.so.0.4002.0)
==7986==    by 0x4270281: g_slice_alloc (in /lib/i386-linux-gnu/libglib-2.0.so.0.4002.0)
==7986==    by 0x42503E0: g_list_append (in /lib/i386-linux-gnu/libglib-2.0.so.0.4002.0)
==7986==    by 0x5097B05: ??? (in /usr/lib/i386-linux-gnu/gdk-pixbuf-2.0/2.10.0/loaders/libpixbufloader-gif.so)
==7986==    by 0x50982B8: ??? (in /usr/lib/i386-linux-gnu/gdk-pixbuf-2.0/2.10.0/loaders/libpixbufloader-gif.so)
==7986==    by 0x50C0581: gdk_pixbuf_loader_write (in /usr/lib/i386-linux-gnu/libgdk_pixbuf-2.0.so.0.3000.7)
==7986==    by 0x508E083: gst_gdk_pixbuf_dec_chain (gstgdkpixbufdec.c:490)
==7986==    by 0x40E25B7: gst_pad_push_data (gstpad.c:4096)
==7986==    by 0x40EB136: gst_pad_push (gstpad.c:4467)
==7986==    by 0x6526D63: gst_type_find_element_loop (gsttypefindelement.c:1127)
==7986==    by 0x4118888: gst_task_func (gsttask.c:331)
==7986==    by 0x4119A2E: default_func (gsttaskpool.c:68)
==7986==    by 0x427B404: ??? (in /lib/i386-linux-gnu/libglib-2.0.so.0.4002.0)
==7986==    by 0x427A9A9: ??? (in /lib/i386-linux-gnu/libglib-2.0.so.0.4002.0)
==7986==    by 0x431FF6F: start_thread (pthread_create.c:312)
==7986==    by 0x4421BED: clone (clone.S:129)
Comment 1 Vineeth 2015-10-08 02:44:51 UTC
Created attachment 312875 [details] [review]
fix pixbuf_loader leak
Comment 2 Sebastian Dröge (slomo) 2015-10-08 14:02:16 UTC
Comment on attachment 312875 [details] [review]
fix pixbuf_loader leak

commit 4000d97a819103edd08a326d3bf82deba08f5d4f
Author: Vineeth TM <vineeth.tm@samsung.com>
Date:   Thu Oct 8 11:44:04 2015 +0900

    gdkpixbufdec: Fix pixbuf_loader leak during failures
    
    https://bugzilla.gnome.org/show_bug.cgi?id=756219