gdkpixbufdec: Fix pixbuf_loader leak during failures

https://bugzilla.gnome.org/show_bug.cgi?id=756219